@@ -37,8 +37,7 @@
 	 send_element/2,
 	 socket_type/0,
 	 get_presence/1,
-	 get_subscribed/1,
-	 get_subscribed_and_online/1]).
+	 get_subscribed/1]).
 
 %% gen_fsm callbacks
 -export([init/1,
@@ -84,7 +83,6 @@
 		pres_f = ?SETS:new(),
 		pres_a = ?SETS:new(),
 		pres_i = ?SETS:new(),
-		pres_available = ?DICT:new(),
 		pres_last, pres_pri,
 		pres_timestamp,
 		pres_invis = false,
@@ -214,14 +212,8 @@ init([{SockMod, Socket}, Opts]) ->
     end.
 
 %% Return list of all available resources of contacts,
-%% in form [{JID, Caps}].
 get_subscribed(FsmRef) ->
-    gen_fsm:sync_send_all_state_event(
-      FsmRef, get_subscribed, 1000).
-get_subscribed_and_online(FsmRef) ->
-    gen_fsm:sync_send_all_state_event(
-      FsmRef, get_subscribed_and_online, 1000).
-
+    gen_fsm:sync_send_all_state_event(FsmRef, get_subscribed, 1000).
 
 %%----------------------------------------------------------------------
 %% Func: StateName/2
@@ -1032,29 +1024,8 @@ handle_sync_event({get_presence}, _From, StateName, StateData) ->
     fsm_reply(Reply, StateName, StateData);
 
 handle_sync_event(get_subscribed, _From, StateName, StateData) ->
-    Subscribed = StateData#state.pres_f,
-    Online = StateData#state.pres_available,
-    Pred = fun(User, _Caps) ->
-		   ?SETS:is_element(jlib:jid_remove_resource(User),
-				    Subscribed) orelse
-		       ?SETS:is_element(User, Subscribed)
-	   end,
-    SubscribedAndOnline = ?DICT:filter(Pred, Online),
-    SubscribedWithCaps  = ?SETS:fold(fun(User, Acc) ->
-	    [{User, undefined}|Acc]
-	end, ?DICT:to_list(SubscribedAndOnline), Subscribed),
-    {reply, SubscribedWithCaps, StateName, StateData};
-
-handle_sync_event(get_subscribed_and_online, _From, StateName, StateData) ->
-    Subscribed = StateData#state.pres_f,
-    Online = StateData#state.pres_available,
-    Pred = fun(User, _Caps) ->
-		   ?SETS:is_element(jlib:jid_remove_resource(User),
-				    Subscribed) orelse
-		       ?SETS:is_element(User, Subscribed)
-	   end,
-    SubscribedAndOnline = ?DICT:filter(Pred, Online),
-    {reply, ?DICT:to_list(SubscribedAndOnline), StateName, StateData};
+    Subscribed = ?SETS:to_list(StateData#state.pres_f),
+    {reply, Subscribed, StateName, StateData};
 
 handle_sync_event(_Event, _From, StateName, StateData) ->
     Reply = ok,
@@ -1147,41 +1118,39 @@ handle_info({route, From, To, Packet}, StateName, StateData) ->
 				LFrom = jlib:jid_tolower(From),
 				LBFrom = jlib:jid_remove_resource(LFrom),
 				%% Note contact availability
-				Caps = mod_caps:read_caps(Els),
-				mod_caps:note_caps(StateData#state.server, From, Caps),
-				NewAvailable = case xml:get_attr_s("type", Attrs) of
-						   "unavailable" ->
-						       ?DICT:erase(LFrom, StateData#state.pres_available);
-						   _ ->
-						       ?DICT:store(LFrom, Caps, StateData#state.pres_available)
-					       end,
-				NewStateData = StateData#state{pres_available = NewAvailable},
+				case xml:get_attr_s("type", Attrs) of
+				    "unavailable" -> 
+					mod_caps:clear_caps(From);
+				    _ -> 
+					Caps = mod_caps:read_caps(Els),
+					mod_caps:note_caps(StateData#state.server, From, Caps)
+				end,
 				case ?SETS:is_element(
-					LFrom, NewStateData#state.pres_a) orelse
+					LFrom, StateData#state.pres_a) orelse
 				    ?SETS:is_element(
-				       LBFrom, NewStateData#state.pres_a) of
+				       LBFrom, StateData#state.pres_a) of
 				    true ->
-					{true, Attrs, NewStateData};
+					{true, Attrs, StateData};
 				    false ->
 					case ?SETS:is_element(
-						LFrom, NewStateData#state.pres_f) of
+						LFrom, StateData#state.pres_f) of
 					    true ->
 						A = ?SETS:add_element(
 						       LFrom,
-						       NewStateData#state.pres_a),
+						       StateData#state.pres_a),
 						{true, Attrs,
-						 NewStateData#state{pres_a = A}};
+						 StateData#state{pres_a = A}};
 					    false ->
 						case ?SETS:is_element(
-							LBFrom, NewStateData#state.pres_f) of
+							LBFrom, StateData#state.pres_f) of
 						    true ->
 							A = ?SETS:add_element(
 							       LBFrom,
-							       NewStateData#state.pres_a),
+							       StateData#state.pres_a),
 							{true, Attrs,
-							 NewStateData#state{pres_a = A}};
+							 StateData#state{pres_a = A}};
 						    false ->
-							{true, Attrs, NewStateData}
+							{true, Attrs, StateData}
 						end
 					end
 				end;
